5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1679_1872.log
== TEST (2019-04-25 17:10:53) 
-- CODE:
var1=int(input("x:"))
var2=int(input("y:"))

if(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")
else:
	print("Origem")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:11:07) 
-- CODE:
var1=int(input("x:"))
var2=int(input("y:"))

if(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")
else:
	print("Origem")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:11:11) 
-- CODE:
var1=int(input("x:"))
var2=int(input("y:"))

if(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")
else:
	print("Origem")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:11:18) 
-- CODE:
var1=int(input("x:"))
var2=int(input("y:"))

if(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")
else:
	print("Origem")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:12:48) 
-- CODE:
var1=int(input("x:"))
var2=int(input("y:"))

if(var1==0 and var2==0)
	print("origem")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- ERROR:
File "XXXX", line 4
    if(var1==0 and var2==0)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:12:52) 
-- CODE:
var1=int(input("x:"))
var2=int(input("y:"))

if(var1==0 and var2==0):
	print("origem")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:13:01) 
-- CODE:
var1=int(input("x:"))
var2=int(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:13:12) 
-- CODE:
var1=int(input("x:"))
var2=int(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:13:17) 
-- CODE:
var1=int(input("x:"))
var2=int(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:13:44) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:13:59) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:19:36) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1==0 and var2>0 or var2<0):
	print("Eixo Y")
elif(var1>0 or var1<0 and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:19:44) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1==0 and var2>0 or var2<0):
	print("Eixo Y")
elif(var1>0 or var1<0 and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:19:50) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1==0 and var2>0 or var2<0):
	print("Eixo Y")
elif(var1>0 or var1<0 and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- EXECUTION TIME:
0.13778
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo Y
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:21:43) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1==0 and var2>0 or var2<0):
	print("Eixo Y")
elif(var1>0 or var1<0 and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:21:49) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1==0 and var2>0 or var2<0):
	print("Eixo Y")
elif(var1>0 or var1<0 and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:21:57) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1==0 and var2>0 or var2<0):
	print("Eixo Y")
elif(var1>0 or var1<0 and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:22:02) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1==0 and var2>0 or var2<0):
	print("Eixo Y")
elif(var1>0 or var1<0 and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:22:08) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1==0 and var2>0 or var2<0):
	print("Eixo Y")
elif(var1>0 or var1<0 and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:22:12) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif(var1==0 and var2>0 or var2<0):
	print("Eixo Y")
elif(var1>0 or var1<0 and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:03) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:13) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:29) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:33) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:42) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:50) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:26:01) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q2")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q4")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:27:14) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:27:26) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- EXECUTION TIME:
0.133906
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo Y
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:27:46) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:27:52) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:27:58) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:28:09) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:28:13) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:28:16) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:28:24) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0 and var2>0) or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:28:57) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0) and (var2>0 or var2<0):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- ERROR:
File "XXXX", line 6
    elif((var1==0) and (var2>0 or var2<0):
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:29:05) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0) and (var2>0 or var2<0)):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:29:12) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0) and (var2>0 or var2<0)):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:29:19) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0) and (var2>0 or var2<0)):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:29:25) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0) and (var2>0 or var2<0)):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:29:28) 
-- CODE:
var1=float(input("x:"))
var2=float(input("y:"))

if(var1==0 and var2==0):
	print("Origem")
elif((var1==0) and (var2>0 or var2<0)):
	print("Eixo Y")
elif((var1>0 or var1<0) and var2==0):
	print("Eixo X")
elif(var1>0 and var2>0):
	print("Q1")
elif(var1>0 and var2<0):
	print("Q4")
elif(var1<0 and var2>0):
	print("Q3")
elif(var1<0 and var2<0):
	print("Q2")

-- EXECUTION TIME:
0.125794
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
